# Scheduler

./: LICENSE  README.md  main.py  pyproject.toml  show.py
Scheduler.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scheduler/: cli.py  config.py  error.py  files_properties.py  instance_generator.py  scheduler.py  utils.py
scheduler/builder/: assignment.py  base.py  group.py  resource.py  task.py
scheduler/io/: assignment.py  base.py  group.py  resource.py  task.py
scheduler/plot/: __init__.py  plotter.py
scheduler/problem/: problem.py  solution.py
scheduler/reader/: assignment.py  base.py  group.py  resource.py  task.py
scheduler/solver/: fluidmodel.py  model.py  utils.py
src/problem/: problem.py
src/resource/: resource.py
src/scheduling.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/solver/: fluidmodel.py
src/task/: task.py
test/: generator.py
test/output/: assignments.csv  schedule.html  tasks.csv
test/test_instance/: config.toml  group_assignments.csv  groups.csv  resource_assignments.csv  resource_groups.csv  resources.csv  tasks.csv
