[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scheduling"
version = "0.1.0"
description = "A scheduling task/solver package"
readme = "README.md"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.26",
  "cvxpy>=1.5",
  "polars>=0.18"
]
keywords = ["scheduling", "solver", "task"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://example.com/scheduling"
"Source" = "https://example.com/scheduling.git"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["test"]
