[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Scheduler"
version = "0.1.0"
description = "A scheduling library"
authors = [
  {name = "Unknown", email = "unknown@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
  "cffi==2.0.0",
  "clarabel==0.11.1",
  "contourpy==1.3.3",
  "cvxpy==1.8.2",
  "cycler==0.12.1",
  "fonttools==4.62.1",
  "highspy==1.13.1",
  "Jinja2==3.1.6",
  "joblib==1.5.3",
  "kiwisolver==1.5.0",
  "MarkupSafe==3.0.3",
  "matplotlib==3.10.8",
  "numpy==2.4.3",
  "osqp==1.1.1",
  "packaging==26.0",
  "pillow==12.1.1",
  "polars==1.39.3",
  "polars-runtime-32==1.39.3",
  "pycparser==3.0",
  "pyparsing==3.3.2",
  "pyscipopt",
  "python-dateutil==2.9.0.post0",
  "scipy==1.17.1",
  "scs==3.2.11",
  "setuptools==82.0.1",
  "six==1.17.0",
  "pandera==0.30.1",
  "pyarrow",
  "pandas",
  "tomli==2.4.1",
]

[tool.setuptools]
packages = ["scheduler", "test"]